--- a/GoodAsOldPhones/Base.lproj/Main.storyboard
+++ b/GoodAsOldPhones/Base.lproj/Main.storyboard
@@ -75,6 +75,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="BND-lg-Kg4"/>
                     <connections>
                         <outlet property="scrollView" destination="TVU-3U-0xy" id="iJ3-Fl-KWE"/>
                     </connections>
@@ -161,7 +162,7 @@
                     </subviews>
                 </scrollView>
             </objects>
-            <point key="canvasLocation" x="556" y="52.623688155922046"/>
+            <point key="canvasLocation" x="566" y="-618"/>
         </scene>
         <!--Products Table View Controller-->
         <scene sceneID="VBT-4k-wHT">
@@ -189,7 +190,25 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FXe-Ef-nP0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1237.5999999999999" y="52.623688155922046"/>
+            <point key="canvasLocation" x="1576.8" y="52.623688155922046"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="NOm-jl-grP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZCK-6b-fix" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="toV-w0-nj6">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ugl-D0-UGg" kind="relationship" relationship="rootViewController" id="Gly-0m-SPy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="raI-Pj-jzl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-236" y="-618"/>
         </scene>
     </scenes>
     <resources>
